2016-07-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71909
	* g++.dg/parse/pr71909.C: New test.
	* g++.dg/tm/pr71909.C: New test.

2016-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/71874
	* g++.dg/torture/pr71874.C: New test.

2016-07-19  Martin Jambor  <mjambor@suse.cz>

        PR fortran/71688
        * gfortran.dg/pr71688.f90: New test.

2016-07-19  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2016-07-18  Jakub Jelinek  <jakub@redhat.com>

	PR c++/71871
	* g++.dg/ext/vector31.C: New test.

	2016-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/71758
	* c-c++-common/gomp/pr71758.c: New test.
	* gfortran.dg/gomp/pr71758.f90: New test.

2016-07-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	Backport from trunk:
	PR fortran/71764
	* gfortran.dg/pr71764.f90: New test.

2016-07-08  Martin Liska  <mliska@suse.cz>

	Backported from mainline
	2016-07-08  Martin Liska  <mliska@suse.cz>

	* gcc.dg/torture/pr71606.c: New test.

2016-07-07  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2016-06-30  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/71704
	* gfortran.dg/gomp/pr71704.f90: New test.

	PR fortran/71705
	* gfortran.dg/gomp/pr71705.f90: New test.

	2016-06-28  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/71626
	* gcc.c-torture/execute/pr71626-1.c: New test.
	* gcc.c-torture/execute/pr71626-2.c: New test.

	2016-06-21  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/71588
	* gcc.dg/pr71558.c: New test.

	2016-06-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/71494
	* gcc.c-torture/execute/pr71494.c: New test.

	2016-03-29  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/70429
	* gcc.c-torture/execute/pr70429.c: New test.

	2016-03-15  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/70222
	* gcc.c-torture/execute/pr70222-1.c: New test.
	* gcc.c-torture/execute/pr70222-2.c: New test.

	2016-03-11  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/70169